reintroduced overflow on body to fix landing page

--- a/src/sass/gui.scss
+++ b/src/sass/gui.scss
@@ -15,7 +15,6 @@ body {
     background-color: $dark;
     color: $white;
     font-family: $fonts;
-    overflow: hidden;
     width : 100%;
     height: 100%;
 }
